wacc/test/golden/syntaxErr.if.ifiErr
# if typo

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  ifi true 
  then
    skip
  else
    skip
  fi
end


In test/wacc_examples/invalid/syntaxErr/if/ifiErr.wacc (line 12, column 7):
  unexpected "t"
  expected "[" or assignment
  >begin
  >  ifi true 
         ^
  >  then